--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Calculadora en Javascript</h1>
     <div class="contenedor">
         <input type="text" id="ope" class="entrada" placeholder="0">
         <div class="botones">
